--- a/project/mian/index.html
+++ b/project/mian/index.html
@@ -25,7 +25,7 @@
         <i class="bx bx-menu" id="menu-icon"></i>
         <a href="#" class="logo">tyre<span>point</span></a>
         <ul class="navbar">
-          <li><a href="home.html" class="active">Home</a></li>
+          <li><a href="index.html" class="active">Home</a></li>
           <li><a href="tyres.html">Tyres </a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="contact.html">Contact us</a></li>
